# tiralabra

./: .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml
.github/workflows/: codecov upload.yml  main.yml
dokumentaatio/: Määrittelydokumentti.md  Testausdokumentti.md  Toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikkoraportti_1.md  viikkoraportti_2.md  viikkoraportti_3.md  viikkoraportti_4.md  viikkoraportti_5.md  viikkoraportti_6.md
src/: assets_io.py  console_io.py  graph.py  main.py
src/algorithms/: a_star.py  dijkstra.py  jps.py
src/assets/: README.md
src/services/: algorithms_service.py  assets_service.py  visualization_service.py
src/tests/: algorithms_test.py  assets_io_test.py  assets_service_test.py  graph_test.py  main_test.py  visualization_service_test.py
src/ui/: commandline_arguments_parser.py  console_io.py
