[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Wincewind <86107954+Wincewind@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^3.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
